--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -8,3 +8,17 @@
     flex: 1;
     margin-bottom: 5em;
 }
+
+
+.filter-changed {
+    background-color: #dddfeb;
+    width: 100%;
+    margin: 20px 0;
+    height: 100px;
+    border-radius: 10px;
+    box-shadow: 0 0.15rem 1.75rem 0 rgb(58 59 69 / 15%) !important;
+}
+
+.ajust {
+    padding: 15px;
+}
