--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -18,7 +18,7 @@ a {
     background-color: #dddfeb;
     width: 100%;
     margin: 20px 0;
-    height: 100px;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 0 0.15rem 1.75rem 0 rgb(58 59 69 / 15%) !important;
 }
