--- a/public/loja/css/style.scss
+++ b/public/loja/css/style.scss
@@ -106,12 +106,22 @@ a.list-group-item.list-group-item-action {
 html {
   height: 100%;
   min-height: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
+  font-family: 'Poppins', sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100%;
+}
+
+.breve{
+  width: 100%;
+  height: 30vh;
+  display: grid;
+  place-content: center;
+  place-items: center;
 }
 
 footer {
@@ -130,3 +140,4 @@ footer {
     margin: 8px 0;
   }
 }
+
