--- a/public/loja/css/style.scss
+++ b/public/loja/css/style.scss
@@ -116,7 +116,7 @@ body {
   min-height: 100%;
 }
 
-.breve{
+.breve {
   width: 100%;
   height: 30vh;
   display: grid;
@@ -135,9 +135,36 @@ footer {
   display: flex;
 
   flex-direction: column;
-  img{
+
+  img {
     width: 80px;
     margin: 8px 0;
   }
 }
 
+.order {
+  background-color: #f8f9fa;
+  margin: 10px 0;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 6px 5px 0px rgba(0, 0, 0, 0.12);
+  padding: 40px 10px;
+
+  a {
+
+    text-decoration: none !important;
+
+  }
+
+  p {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  .order-flex {
+    display: flex;
+    justify-content: space-around;
+    place-items: center;
+  }
+}
