--- a/public/loja/css/style.scss
+++ b/public/loja/css/style.scss
@@ -187,3 +187,14 @@ footer {
     font-weight: 700;
   }
 }
+.pedido-check{
+  p{
+    font-weight: 700;
+  }
+  span{
+    color: #5e5e5e;
+  }
+}
+.btn-cupom{
+  margin-top: 33px;
+}
