--- a/public/loja/css/style.scss
+++ b/public/loja/css/style.scss
@@ -187,14 +187,21 @@ footer {
     font-weight: 700;
   }
 }
-.pedido-check{
-  p{
+
+.pedido-check {
+  p {
     font-weight: 700;
   }
-  span{
+
+  span {
     color: #5e5e5e;
   }
 }
-.btn-cupom{
+
+.btn-cupom {
   margin-top: 33px;
+}
+
+.text-alt {
+  color: #91C749;
 }
