--- a/public/vet/css/main.scss
+++ b/public/vet/css/main.scss
@@ -476,4 +476,78 @@ canvas {
             }
         }
     }
+
+    .btn-next {
+        background: #684286;
+        color: #fff;
+        border: 0;
+        padding: 20px;
+        border-radius: 5px;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background: #fff;
+            color: #684286;
+            border: 1px solid #684286;
+        }
+    }
+
+    .btn-save {
+        background: #8BC540;
+        color: #fff;
+        border: 0;
+        padding: 20px;
+        border-radius: 5px;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background: #fff;
+            color: #684286;
+            border: 1px solid #684286;
+        }
+    }
+}
+
+.user-configs-active {
+    display: flex !important;
+}
+
+.user-configs {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 70px;
+    right: 40px;
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    .user-configs-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background-color: #684286;
+            color: #fff;
+        }
+        a{
+            color: #684286;
+            text-decoration: none;
+        }
+    }
 }
