--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -81,3 +81,11 @@ a {
 
 }
 
+.btn-alt-2{
+    background-color: #694487 !important;
+    color: #fff !important;
+    padding: 1.5em;
+}
+.card-alt{
+    background-color: #dddfeb;
+}
