validacao vet multstep

--- a/public/vet/css/main.scss
+++ b/public/vet/css/main.scss
@@ -587,7 +587,7 @@ canvas {
     background: #8BC540;
     color: #fff;
     border: 0;
-    padding: 30px 20px;
+    padding: 20px;
     border-radius: 5px;
     font-size: 14px;
     font-weight: 700;
