--- a/public/adm/assets/css/codebar.scss
+++ b/public/adm/assets/css/codebar.scss
@@ -1,15 +1,16 @@
-
 .print p {
     font-size: 12px;
     margin: 0;
     padding: 0;
+   
 }
+
 page {
     background: white;
     display: block;
     margin: 0 auto;
     margin-bottom: 0.5cm;
-    box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+    border: solid 1px black;
 }
 
 page[size="A4"] {
@@ -22,4 +23,27 @@ page[size="A4"] {
     margin-right: 0em;
     margin-top: 0em;
 
+}
+
+@media print {
+ 
+    page{
+        border: none !important;
+    }
+
+    .no-print,
+    .no-print * {
+        display: none !important;
+    }
+
+    .print {
+        display: block;
+        page-break-before: always;
+        margin-top: 5em;
+        
+    }
+
+    .print:last-child {
+        page-break-before: avoid;
+    }
 }
