--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -92,7 +92,7 @@ a {
 }
 
 .ordem-servico {
-    .card {
+    .card-alt {
         border: 1px solid #ccc;
         border-radius: 5px;
         padding: 10px;
