--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -113,3 +113,17 @@ a {
         font-weight: bold;
     }
 }
+
+.alelos-compare {
+    input {
+        width: 100%;
+        margin: 1px 0;
+    }
+}
+
+.mae {
+    background-color: pink;
+}
+.pai{
+    background-color: lightblue;
+}
