--- a/public/adm/assets/css/style.scss
+++ b/public/adm/assets/css/style.scss
@@ -1,6 +1,77 @@
+/* Reset CSS */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+
+    vertical-align: baseline;
+}
+
 a {
     text-decoration: none !important;
 }
+
 
 #wrapper {
     display: flex;
@@ -127,3 +198,24 @@ a {
 .pai{
     background-color: lightblue;
 }
+
+// Laudo
+.card {
+    max-width: 1000px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .card h2 {
+    color: #333;
+    margin-bottom: 10px;
+  }
+
+  .card p {
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 8px;
+  }
